# PolyDepth

./: .gitignore  CMakeLists.txt
.github/workflows/: linux.yml  windows.yml
PolyDepthDemo/: CMakeLists.txt  main.cpp  main.h  model.cpp  model.h
dependencies/: CMakeLists.txt
dependencies/C2A/: CMakeLists.txt
dependencies/glut/: CMakeLists.txt
dependencies/pqp/: CMakeLists.txt
include/PolyDepth/: ClearConfiguration.h  MeshObject.h  PolyDepth.h
src/: MeshObject.cpp  PolyDepth.cpp
